--- a/Service.test/Service.test.csproj
+++ b/Service.test/Service.test.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Service\triangles.csproj" />
+    <ProjectReference Include="..\Service\Triangles.csproj" />
   </ItemGroup>
 
 </Project>
